--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
-    <string name="app_name">ICS342Assign1</string>
+    <string name="app_name">Weather App</string>
     <string name="city_name">St. Paul, MN</string>
+    <string name="temp">72&#xb0;</string>
+    <string name="feels_like">Feels like 78&#xb0;</string>
+    <string name="details">Low 65&#xb0;\nHigh 80&#xb0;\nHumidity 100%\nPressure 1023 hPa</string>
+    <string name="forecast">Forecast</string>
+    <string name="condition_button">Back</string>
 </resources>
