--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Weather App</string>
     <string name="city_name">St. Paul, MN</string>
-    <string name="current_temp">102</string>
-    <string name="feels_like_temp">Feels like %d</string>
+    <string name="feels_like_temp">Feels like %d°</string>
     <string name="humidity">Humidity: %d%%</string>
     <string name="pressure">Pressure: %dhPa</string>
-    <string name="high_temp">High: %d</string>
-    <string name="low_temp">Low: %d</string>
+    <string name="high_temp">High: %d°</string>
+    <string name="low_temp">Low: %d°</string>
     <string name="sunrise">Sunrise: %d</string>
     <string name="sunset">Sunset: %d</string>
     <string name="forecast">Forecast: %d</string>
+    <string name="temperature">%s°</string>
 </resources>
